--- a/Pipfile
+++ b/Pipfile
@@ -5,12 +5,13 @@ name = "pypi"
 
 [packages]
 django = "5.1.3"
-django-environ = "*"
-psycopg2-binary = "*"
-pillow = "*"
-django-simple-captcha = "*"
-bleach = "*"
-markdown = "*"
+django-environ = "0.11.2"
+psycopg2-binary = "2.9.10"
+pillow = "11.0.0"
+django-simple-captcha = "0.6.0"
+bleach = "6.2.0"
+markdown = "3.7"
+whitenoise = "6.8.2"
 
 [dev-packages]
 
