readme.md added

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,9 +18,9 @@ services:
     ports:
       - "5432:5432"
     environment:
-      POSTGRES_DB: ${pg_db}
-      POSTGRES_USER: ${pg_user}
-      POSTGRES_PASSWORD: ${pg_password}
+      POSTGRES_DB: ${DATABASE_NAME}
+      POSTGRES_USER: ${DATABASE_USER}
+      POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
