--- a/Docker/docker_hub/.env.example
+++ b/Docker/docker_hub/.env.example
@@ -4,7 +4,7 @@ DATABASE_ENGINE=django.db.backends.postgresql_psycopg2
 DATABASE_NAME=
 DATABASE_USER=
 DATABASE_PASSWORD=
-DATABASE_HOST=db
+DATABASE_HOST=localhost
 DATABASE_PORT=
 
 EMAIL_HOST=
