--- a/env.example
+++ b/env.example
@@ -1,10 +1,10 @@
 SECRET_KEY=
 
-DATABASE_ENGINE=
+DATABASE_ENGINE=django.db.backends.postgresql_psycopg2
 DATABASE_NAME=
 DATABASE_USER=
 DATABASE_PASSWORD=
-DATABASE_HOST=
+DATABASE_HOST=localhost
 DATABASE_PORT=
 
 EMAIL_HOST=
